# WetTerrarium

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  vcpkg.json
assets/: .gitkeep
engine/noise/: ValueNoise.hpp
engine/render/: Camera.cpp  Camera.hpp
engine/tile/: Chunk.hpp  Coords.hpp  LightMap.cpp  LightMap.hpp  TileAtlas.hpp  TileBatch.cpp  TileBatch.hpp  TileTypes.hpp
engine/world/: World.cpp  World.hpp
src/: main.cpp
